# Boundary-Descriptors

./: .gitignore  ChainCode.py  FourierDescriptors.py  LICENSE  LeavesNeuralNetStatisticalMoments.py  NeuralNetStatisticalMoments.py  README.md  ShapeNumbers.py  StatisticalMoments.py  generateTrainData.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
